# GameOfLife

./: .bazelrc  .clang-format  BUILD.bazel  GameOfLife.bazelproject  README.md  WORKSPACE  runner.cpp  simulator.cpp  simulator.h
.clion_targets/: main_build.xml  main_run.xml
.github/workflows/: ubuntu.yml
Assets/: BUILD.bazel
GUI/: BUILD.bazel
GUI/src/: assets.cpp  assets.h  cell_state_visualization.h  config.h  grid.cpp  grid.h  initial_cell_state.cpp  initial_cell_state.h  initial_cells_state.cpp  initial_cells_state.h  main_menu.cpp  main_menu.h  menu_bar.h  options.cpp  options.h  rule_preview.cpp  rule_preview.h  simulator_log.cpp  simulator_log.h  utility.cpp  utility.h  viewport.cpp  viewport.h
GUI/test/: grid_test.cpp  utility_test.cpp
Scripts/: install.sh
Simulator/: BUILD.bazel
Simulator/src/: cellular_automata_algorithm.cpp  cellular_automata_algorithm.h  data.h  rules.h  rules_creator.cpp  rules_creator.h
Simulator/test/: cellular_automata_algorithm_test.cpp  rules_creator_test.cpp  rules_test.cpp  test_utility.h
