load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "gui_components",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    data = ["//Assets:images"],
    visibility = ["//visibility:public"],
    deps = [
        "//Simulator:simulator",
        "@fmtlib//:fmt",
        "@imguilib//:imgui",
    ],
)

cc_test(
    name = "grid_test",
    srcs = ["test/grid_test.cpp"],
    tags = ["test"],
    deps = [
        ":gui_components",
        "@fmtlib//:fmt",
        "@googletestlib//:gtest",
    ],
)

cc_test(
    name = "utility_test",
    srcs = ["test/utility_test.cpp"],
    tags = ["test"],
    deps = [
        ":gui_components",
        "@fmtlib//:fmt",
        "@googletestlib//:gtest",
    ],
)
