load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "simulator",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "@fmtlib//:fmt",
    ],
)

cc_library(
    name = "test_utility",
    srcs = ["test/test_utility.h"],
    visibility = ["//visibility:public"],
    deps = ["@fmtlib//:fmt"],
)

cc_test(
    name = "cellular_automata_algorithm_test",
    srcs = glob(["test/cellular_automata_algorithm_test.cpp"]),
    tags = ["test"],
    deps = [
        ":simulator",
        ":test_utility",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "rules_test",
    srcs = glob(["test/rules_creator_test.cpp"]),
    tags = ["test"],
    deps = [
        ":simulator",
        ":test_utility",
        "@googletest//:gtest",
    ],
)
